versions/v3.6.0/doxygen/html/group__devicetree.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/doxygen/html/group__devicetree.html
original_path: doxygen/html/group__devicetree.html
---

| Logo | Zephyr API Documentation  3.6.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Devicetree

devicetree.h API
[More...](#details)

| Topics | |
| --- | --- |
|  | ["For-each" macros](group__devicetree-generic-foreach.md) |
|  | [Bus helpers](group__devicetree-generic-bus.md) |
|  | [Chosen nodes](group__devicetree-generic-chosen.md) |
|  | [Dependency tracking](group__devicetree-dep-ord.md) |
|  | [Devicetree CAN API](group__devicetree-can.md) |
|  | [Devicetree Clocks API](group__devicetree-clocks.md) |
|  | [Devicetree DMA API](group__devicetree-dmas.md) |
|  | [Devicetree Fixed Partition API](group__devicetree-fixed-partition.md) |
|  | [Devicetree GPIO API](group__devicetree-gpio.md) |
|  | [Devicetree IO Channels API](group__devicetree-io-channels.md) |
|  | [Devicetree MBOX API](group__devicetree-mbox.md) |
|  | [Devicetree PWMs API](group__devicetree-pwms.md) |
|  | [Devicetree Reset Controller API](group__devicetree-reset-controller.md) |
|  | [Devicetree SPI API](group__devicetree-spi.md) |
|  | [Existence checks](group__devicetree-generic-exist.md) |
|  | [Instance-based devicetree APIs](group__devicetree-inst.md) |
|  | [Node identifiers and helpers](group__devicetree-generic-id.md) |
|  | [Pin control](group__devicetree-pinctrl.md) |
|  | [Property accessors](group__devicetree-generic-prop.md) |
|  | [Vendor and model name helpers](group__devicetree-generic-vendor.md) |
|  | [interrupts property](group__devicetree-interrupts-prop.md) |
|  | [ranges property](group__devicetree-ranges-prop.md) |
|  | [reg property](group__devicetree-reg-prop.md) |

## Detailed Description

devicetree.h API

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.6.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
